--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^4.2.4",
     "@types/chrome": "0.0.56",
     "angular-sortablejs": "^2.3.0",
+    "chrome-promise": "^2.1.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "sortablejs": "^1.7.0",
