--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,13 @@
         "scripts": ["background.js"],
         "persistent": false
     },
+    "icons": {
+        "16": "icons/icon16.png",
+        "24": "icons/icon24.png",
+        "32": "icons/icon32.png",
+        "64": "icons/icon64.png",
+        "128": "icons/icon128.png"
+    },
     "permissions": [
         "tabs",
         "background"
