--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "url-parse": "^1.4.0"
   }
 }
